--- a/TIA_Add-In_BlockAutoNumber/TIA_Add-In_BlockAutoNumber.csproj
+++ b/TIA_Add-In_BlockAutoNumber/TIA_Add-In_BlockAutoNumber.csproj
@@ -11,6 +11,8 @@
     <AssemblyName>TIA_Add_In_BlockAutoNumber</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -32,12 +34,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <PostBuildEvent>"$(SolutionDir)PublicAPI\Siemens.Engineering.AddIn.Publisher.exe" --configuration ..\..\Configuration.xml --logfile .\Log.txt --verbose</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Siemens.Engineering.AddIn">
-      <HintPath>..\PublicAPI\Siemens.Engineering.AddIn.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
@@ -54,9 +54,6 @@
       <Project>{5425301c-f2c6-451f-847d-f18213ae1ae7}</Project>
       <Name>TIA_Add-In_BlockAutoNumber_UI</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Configuration.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
